# jujutsu-kaisen-api

./: .cargo.toml  .env  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  rustfmt.toml  spec.yaml
.github/workflows/: general.yml
configuration/: base.json
migrations/: 20241001165853_create_characters_table.sql  20241002151721_create_episodes_table.sql  20241002151724_create_locations_table.sql  20241002152521_create_characters_table.sql  20241004180916_create_characters_table.sql  20241004180919_create_episodes_table.sql  20241004180926_create_locations_table.sql  20241004180938_create_character_locations_table.sql  20241004180945_create_character_episodes_table.sql
migrations/fixtures/: character_episodes.json  character_locations.json  characters.json  episodes.json  locations.json
scripts/: init_db.sh  init_db_local.sh  install_dev_tool.sh  rm_tests_db.sh
src/: configuration.rs  error.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/application/: README.md  characters.rs  error.rs  mod.rs
src/controllers/: characters.rs  episodes.rs  error.rs  locations.rs  mod.rs
src/core/: error.rs  mod.rs  pagination.rs
src/domain/: character.rs  episode.rs  location.rs  mod.rs
src/infrastructure/repositories/: characters.rs  episodes.rs  locations.rs  mod.rs
tests/: health_check.rs
tests/api/: characters.rs  episodes.rs  health_check.rs  helpers.rs  locations.rs  main.rs
