[package]
name = "jjk-api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "jjk-api"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde-aux = "4"
actix-web = "4.9.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
config = { version = "0.14.0", default-features = false, features = ["json"] }
sqlx = { version = "0.8.2", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde"] }
secrecy = { version = "0.10.2", features = ["serde"] }
derive_more = { version ="1", features = ["full"] }
thiserror = "1.0.64"
anyhow = "1.0.89"

[dev-dependencies]
wiremock = "0.6.2"
reqwest = { version = "0.12.8", default-features = false, features = ["json", "rustls-tls", "cookies"] }
